<resources>
    <string name="retry">Retry</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="location">Location:</string>
    <string name="origin">Origin:</string>
    <string name="type">Type:</string>
    <string name="episode_list">Episode list</string>
    <string name="first_appearance">First appearance:</string>

    <string name="nav_list">All</string>
    <string name="nav_favorites">Favorites</string>
    <string name="empty_favorites">Empty list</string>
</resources>